Remise du rapport

--- a/report/outil.bib
+++ b/report/outil.bib
@@ -29,7 +29,7 @@
 
 @misc{noauthor_ppeposinf889a_angr_nodate,
 	title = {ppepos/inf889a\_angr},
-	author = {Philippe Pépos Petitclerc},
+	author = {Philippe Pépos-Petitclerc},
 	year = 2020,
 	url = {https://github.com/ppepos/inf889a_angr},
 	abstract = {Presentation dans le cadre du cours INF889A. Contribute to ppepos/inf889a\_angr development by creating an account on GitHub.},
